<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:id="@+id/monochromasiaTV"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:text="@string/monochromasiaTV"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="italic"
            >"
            </TextView>
        <TextView
            android:id="@+id/redblindnessTV"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:background="#FF0000"
            android:text="@string/redblindnessTV"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="italic"
            >
            </TextView>"
        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
       <TextView
            android:id="@+id/greenblindnessTV"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:background="#00FF00"
            android:text="@string/greenblindnessTV"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="italic"
            >
            </TextView>
        <TextView
            android:id="@+id/BYblindnessTV"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:background="#FFFF00"
            android:text="@string/BYblindnessTV"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="italic"
            >
            </TextView>
        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
       <TextView
            android:id="@+id/RGblindnessTV"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:background="#49ecd7"
            android:text="@string/RGblindnessTV"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="italic"
            >
            </TextView>
        <TextView
            android:id="@+id/coloragainstTV"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="#000000"
            android:text="@string/coloragainstTV"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="italic"
            >
            </TextView>
        </LinearLayout>
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
          <TextView
            android:id="@+id/colorweaknessTV"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="#7ef87c"
            android:text="@string/colorweaknessTV"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="italic"/>
        <TextView
            android:id="@+id/PcolorweaknessTV"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:background="#f4bdbe"
            android:text="@string/PcolorweaknessTV"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="italic"/>
            </LinearLayout>"
</LinearLayout>
