<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context="com.example2.colorblind.MainActivity" >

    <TextView
        android:id="@+id/tv01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv01" 
        android:textSize="25sp"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>"
    <TextView
        android:id="@+id/tv02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv02"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/gobtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/go"
        android:text="@string/gobtn"
        android:textColor="#000000"
        android:textStyle="italic|bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

</LinearLayout>
