<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="5px"
        android:paddingTop="5px">
        <TextView
            android:id="@+id/monochromasiaTV"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#7f7f86"
            android:text="@string/monochromasiaTV"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginLeft="3px">
            </TextView>
        <TextView
            android:id="@+id/redblindnessTV"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#fa4d4d"
            android:text="@string/redblindnessTV"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginLeft="4px" 
            android:layout_marginRight="3px"
            >
            </TextView>
        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="5px">
      <TextView
            android:id="@+id/greenblindnessTV"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#7ef87c"
            android:text="@string/greenblindnessTV"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginLeft="3px"
            >
            </TextView>
      <TextView
            android:id="@+id/colorweaknessTV"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#6addfa"
            android:text="@string/colorweaknessTV"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginLeft="4px"
            android:layout_marginRight="3px"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="5px">
        <TextView
            android:id="@+id/coloragainstTV"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#494931"
            android:text="@string/coloragainstTV"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginRight="3px"
            android:layout_marginLeft="3px"
            >
            </TextView>
        </LinearLayout>
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="5px">
<TextView
            android:id="@+id/BYblindnessTV"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#FFFF00"
            android:text="@string/BYblindnessTV"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginLeft="4px">
            </TextView>
        <TextView
            android:id="@+id/PcolorweaknessTV"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#7ef87c"
            android:text="@string/PcolorweaknessTV"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginRight="3px"
            android:layout_marginLeft="4px"/>
            </LinearLayout>
</LinearLayout>
