<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/bg01">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <ImageView
        android:id="@+id/img"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal">
        </ImageView>
     </LinearLayout>
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text">    
            </TextView>
            <RadioGroup
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >
                <RadioButton
                    android:id="@+id/choice01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choice01">
              </RadioButton>
              <RadioButton
                  android:id="@+id/choice02"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/choice02">
                  
              </RadioButton>
         
              </RadioGroup>
              <EditText
                  android:id="@+id/answer"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:hint="@string/answer"
                  android:layout_marginTop="10dp"> 
              </EditText>
              
              </LinearLayout>
              <LinearLayout
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:orientation="horizontal"
                  android:baselineAligned="false">
              <LinearLayout
                  android:layout_width="wrap_content"
                  android:layout_height="fill_parent"
                  android:layout_weight="1"
                  android:orientation="vertical">
                    <Button
                        android:id="@+id/next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp">
                    </Button>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                    <Button
                         android:id="@+id/back"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/back"
                         android:layout_marginTop="15dp"
                         android:layout_gravity="center_horizontal">
                     </Button>
            </LinearLayout>
        </LinearLayout>
     </LinearLayout>
</LinearLayout>